--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -515,6 +515,9 @@ video {
 .z-20{
 	z-index: 20;
 }
+.m-3{
+	margin: 0.75rem;
+}
 .mx-auto{
 	margin-left: auto;
 	margin-right: auto;
@@ -523,17 +526,17 @@ video {
 	margin-top: 1.5rem;
 	margin-bottom: 1.5rem;
 }
-.my-8{
-	margin-top: 2rem;
-	margin-bottom: 2rem;
+.my-4{
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 }
 .my-2{
 	margin-top: 0.5rem;
 	margin-bottom: 0.5rem;
 }
-.mx-5{
-	margin-left: 1.25rem;
-	margin-right: 1.25rem;
+.my-8{
+	margin-top: 2rem;
+	margin-bottom: 2rem;
 }
 .-mt-4{
 	margin-top: -1rem;
@@ -550,9 +553,6 @@ video {
 .mb-2{
 	margin-bottom: 0.5rem;
 }
-.ml-2{
-	margin-left: 0.5rem;
-}
 .mb-12{
 	margin-bottom: 3rem;
 }
@@ -568,14 +568,11 @@ video {
 .-mt-20{
 	margin-top: -5rem;
 }
-.mt-10{
-	margin-top: 2.5rem;
+.mt-2{
+	margin-top: 0.5rem;
 }
-.mr-4{
-	margin-right: 1rem;
-}
-.mt-0{
-	margin-top: 0px;
+.mr-auto{
+	margin-right: auto;
 }
 .-mt-12{
 	margin-top: -3rem;
@@ -586,8 +583,8 @@ video {
 .mt-16{
 	margin-top: 4rem;
 }
-.mr-auto{
-	margin-right: auto;
+.mt-10{
+	margin-top: 2.5rem;
 }
 .mb-5{
 	margin-bottom: 1.25rem;
@@ -601,11 +598,11 @@ video {
 .mt-32{
 	margin-top: 8rem;
 }
-.mt-2{
-	margin-top: 0.5rem;
-}
 .-mt-64{
 	margin-top: -16rem;
+}
+.mt-0{
+	margin-top: 0px;
 }
 .block{
 	display: block;
@@ -622,6 +619,9 @@ video {
 .grid{
 	display: grid;
 }
+.hidden{
+	display: none;
+}
 .h-10{
 	height: 2.5rem;
 }
@@ -630,6 +630,9 @@ video {
 }
 .h-full{
 	height: 100%;
+}
+.h-\[300px\]{
+	height: 300px;
 }
 .h-12{
 	height: 3rem;
@@ -649,11 +652,11 @@ video {
 .w-40{
 	width: 10rem;
 }
-.w-4\/12{
-	width: 33.333333%;
-}
 .w-12{
 	width: 3rem;
+}
+.w-9\/12{
+	width: 75%;
 }
 .w-16{
 	width: 4rem;
@@ -716,14 +719,20 @@ video {
 .items-center{
 	align-items: center;
 }
+.items-start{
+	align-items: flex-start;
+}
 .justify-center{
 	justify-content: center;
 }
-.justify-around{
-	justify-content: space-around;
-}
 .justify-between{
 	justify-content: space-between;
+}
+.justify-start{
+	justify-content: flex-start;
+}
+.justify-around{
+	justify-content: space-around;
 }
 .gap-2{
 	gap: 0.5rem;
@@ -734,23 +743,21 @@ video {
 .gap-8{
 	gap: 2rem;
 }
-.self-center{
-	align-self: center;
-}
 .break-words{
 	overflow-wrap: break-word;
 }
 .rounded-full{
 	border-radius: 9999px;
 }
-.rounded-2xl{
-	border-radius: 1rem;
-}
 .rounded{
 	border-radius: 0.25rem;
 }
-.rounded-lg{
-	border-radius: 0.5rem;
+.rounded-2xl{
+	border-radius: 1rem;
+}
+.rounded-b-2xl{
+	border-bottom-right-radius: 1rem;
+	border-bottom-left-radius: 1rem;
 }
 .border-t{
 	border-top-width: 1px;
@@ -803,12 +810,12 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
 }
-.bg-gray-400{
+.bg-black{
 	--tw-bg-opacity: 1;
-	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
-.bg-opacity-60{
-	--tw-bg-opacity: 0.6;
+.bg-roadTrees-background{
+	background-image: linear-gradient(rgba(0,0,0, 0.55), rgba(0,0,0, 0.45)), url('/src/assets/img/roadTrees.jpg');
 }
 .bg-forestTrees-background{
 	background-image: linear-gradient(rgba(0,0,0, 0.55), rgba(0,0,0, 0.45)), url('/src/assets/img/forestTrees.jpg');
@@ -821,9 +828,6 @@ video {
 }
 .bg-login-background{
 	background-image: linear-gradient(rgba(0,0,0, 0.75), rgba(0,0,0, 0.75)), url('/src/assets/img/background-1920x1280.jpg');
-}
-.bg-roadTrees-background{
-	background-image: linear-gradient(rgba(0,0,0, 0.55), rgba(0,0,0, 0.45)), url('/src/assets/img/roadTrees.jpg');
 }
 .bg-cover{
 	background-size: cover;
@@ -848,9 +852,9 @@ video {
 	padding-top: 0.25rem;
 	padding-bottom: 0.25rem;
 }
-.py-2\.5{
-	padding-top: 0.625rem;
-	padding-bottom: 0.625rem;
+.px-6{
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
 }
 .py-2{
 	padding-top: 0.5rem;
@@ -859,14 +863,6 @@ video {
 .py-16{
 	padding-top: 4rem;
 	padding-bottom: 4rem;
-}
-.px-6{
-	padding-left: 1.5rem;
-	padding-right: 1.5rem;
-}
-.py-4{
-	padding-top: 1rem;
-	padding-bottom: 1rem;
 }
 .pt-8{
 	padding-top: 2rem;
@@ -879,6 +875,15 @@ video {
 }
 .pb-2{
 	padding-bottom: 0.5rem;
+}
+.pb-16{
+	padding-bottom: 4rem;
+}
+.pt-10{
+	padding-top: 2.5rem;
+}
+.pr-5{
+	padding-right: 1.25rem;
 }
 .pb-20{
 	padding-bottom: 5rem;
@@ -908,17 +913,9 @@ video {
 	font-size: 0.875rem;
 	line-height: 1.25rem;
 }
-.text-xs{
-	font-size: 0.75rem;
-	line-height: 1rem;
-}
 .text-base{
 	font-size: 1rem;
 	line-height: 1.5rem;
-}
-.text-xl{
-	font-size: 1.25rem;
-	line-height: 1.75rem;
 }
 .font-normal{
 	font-weight: 400;
@@ -926,17 +923,14 @@ video {
 .font-medium{
 	font-weight: 500;
 }
-.font-bold{
-	font-weight: 700;
+.font-light{
+	font-weight: 300;
 }
 .uppercase{
 	text-transform: uppercase;
 }
 .leading-relaxed{
 	line-height: 1.625;
-}
-.tracking-wide{
-	letter-spacing: 0.025em;
 }
 .text-blue-600{
 	--tw-text-opacity: 1;
@@ -977,6 +971,10 @@ video {
 .text-gray-200{
 	--tw-text-opacity: 1;
 	color: rgba(229, 231, 235, var(--tw-text-opacity));
+}
+.text-gray-500{
+	--tw-text-opacity: 1;
+	color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
 .shadow-md{
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -2550,20 +2548,51 @@ video {
 	outline: 2px solid transparent;
 	outline-offset: 2px;
 }
+@media (min-width: 640px){
+	.sm\:mr-2{
+		margin-right: 0.5rem;
+	}
+	.sm\:-ml-1{
+		margin-left: -0.25rem;
+	}
+	.sm\:hidden{
+		display: none;
+	}
+	.sm\:w-3\/12{
+		width: 25%;
+	}
+	.sm\:w-6\/12{
+		width: 50%;
+	}
+	.sm\:flex-row{
+		flex-direction: row;
+	}
+	.sm\:justify-start{
+		justify-content: flex-start;
+	}
+	.sm\:border-r{
+		border-right-width: 1px;
+	}
+	.sm\:text-left{
+		text-align: left;
+	}
+}
 @media (min-width: 768px){
 	.md\:my-0{
 		margin-top: 0px;
 		margin-bottom: 0px;
 	}
-	.md\:mx-0{
-		margin-left: 0px;
-		margin-right: 0px;
-	}
 	.md\:mb-0{
 		margin-bottom: 0px;
 	}
+	.md\:mr-5{
+		margin-right: 1.25rem;
+	}
 	.md\:w-4\/12{
 		width: 33.333333%;
+	}
+	.md\:w-6\/12{
+		width: 50%;
 	}
 	.md\:w-8\/12{
 		width: 66.666667%;
@@ -2574,8 +2603,14 @@ video {
 	.md\:flex-row{
 		flex-direction: row;
 	}
+	.md\:items-center{
+		align-items: center;
+	}
 	.md\:justify-between{
 		justify-content: space-between;
+	}
+	.md\:justify-start{
+		justify-content: flex-start;
 	}
 	.md\:py-10{
 		padding-top: 2.5rem;
@@ -2604,9 +2639,6 @@ video {
 	.lg\:mt-0{
 		margin-top: 0px;
 	}
-	.lg\:mr-4{
-		margin-right: 1rem;
-	}
 	.lg\:w-6\/12{
 		width: 50%;
 	}
@@ -2616,11 +2648,11 @@ video {
 	.lg\:w-3\/12{
 		width: 25%;
 	}
-	.lg\:w-9\/12{
-		width: 75%;
-	}
 	.lg\:w-8\/12{
 		width: 66.666667%;
+	}
+	.lg\:w-9\/12{
+		width: 75%;
 	}
 	.lg\:justify-center{
 		justify-content: center;
@@ -2633,9 +2665,6 @@ video {
 	}
 	.lg\:p-10{
 		padding: 2.5rem;
-	}
-	.lg\:pt-4{
-		padding-top: 1rem;
 	}
 	.lg\:pt-24{
 		padding-top: 6rem;
