--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -534,6 +534,10 @@ video {
 	margin-top: 0.5rem;
 	margin-bottom: 0.5rem;
 }
+.my-10{
+	margin-top: 2.5rem;
+	margin-bottom: 2.5rem;
+}
 .my-8{
 	margin-top: 2rem;
 	margin-bottom: 2rem;
@@ -568,8 +572,14 @@ video {
 .-mt-20{
 	margin-top: -5rem;
 }
+.mt-5{
+	margin-top: 1.25rem;
+}
 .mt-2{
 	margin-top: 0.5rem;
+}
+.mt-10{
+	margin-top: 2.5rem;
 }
 .mr-auto{
 	margin-right: auto;
@@ -583,20 +593,14 @@ video {
 .mt-16{
 	margin-top: 4rem;
 }
-.mt-10{
-	margin-top: 2.5rem;
+.-mb-3{
+	margin-bottom: -0.75rem;
 }
 .mb-5{
 	margin-bottom: 1.25rem;
 }
 .mb-24{
 	margin-bottom: 6rem;
-}
-.-mt-32{
-	margin-top: -8rem;
-}
-.mt-32{
-	margin-top: 8rem;
 }
 .-mt-64{
 	margin-top: -16rem;
@@ -606,9 +610,6 @@ video {
 }
 .block{
 	display: block;
-}
-.inline-block{
-	display: inline-block;
 }
 .flex{
 	display: flex;
@@ -640,9 +641,6 @@ video {
 .h-screen{
 	height: 100vh;
 }
-.h-16{
-	height: 4rem;
-}
 .w-full{
 	width: 100%;
 }
@@ -658,14 +656,14 @@ video {
 .w-9\/12{
 	width: 75%;
 }
-.w-16{
-	width: 4rem;
-}
 .w-96{
 	width: 24rem;
 }
 .w-screen{
 	width: 100vw;
+}
+.w-4\/12{
+	width: 33.333333%;
 }
 .min-w-0{
 	min-width: 0px;
@@ -749,15 +747,35 @@ video {
 .rounded-full{
 	border-radius: 9999px;
 }
+.rounded-xl{
+	border-radius: 0.75rem;
+}
 .rounded{
 	border-radius: 0.25rem;
 }
 .rounded-2xl{
 	border-radius: 1rem;
 }
+.rounded-t-xl{
+	border-top-left-radius: 0.75rem;
+	border-top-right-radius: 0.75rem;
+}
 .rounded-b-2xl{
 	border-bottom-right-radius: 1rem;
 	border-bottom-left-radius: 1rem;
+}
+.rounded-b-lg{
+	border-bottom-right-radius: 0.5rem;
+	border-bottom-left-radius: 0.5rem;
+}
+.border{
+	border-width: 1px;
+}
+.border-4{
+	border-width: 4px;
+}
+.border-2{
+	border-width: 2px;
 }
 .border-t{
 	border-top-width: 1px;
@@ -769,6 +787,10 @@ video {
 .border-gray-200{
 	--tw-border-opacity: 1;
 	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+}
+.border-blue-500{
+	--tw-border-opacity: 1;
+	border-color: rgba(59, 130, 246, var(--tw-border-opacity));
 }
 .bg-gray-100{
 	--tw-bg-opacity: 1;
@@ -810,9 +832,21 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
 }
-.bg-black{
+.bg-blue-400{
 	--tw-bg-opacity: 1;
-	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+	background-color: rgba(96, 165, 250, var(--tw-bg-opacity));
+}
+.bg-blue-300{
+	--tw-bg-opacity: 1;
+	background-color: rgba(147, 197, 253, var(--tw-bg-opacity));
+}
+.bg-green-300{
+	--tw-bg-opacity: 1;
+	background-color: rgba(110, 231, 183, var(--tw-bg-opacity));
+}
+.bg-green-900{
+	--tw-bg-opacity: 1;
+	background-color: rgba(6, 78, 59, var(--tw-bg-opacity));
 }
 .bg-roadTrees-background{
 	background-image: linear-gradient(rgba(0,0,0, 0.55), rgba(0,0,0, 0.45)), url('/src/assets/img/roadTrees.jpg');
@@ -838,6 +872,9 @@ video {
 .bg-left{
 	background-position: left;
 }
+.p-4{
+	padding: 1rem;
+}
 .p-3{
 	padding: 0.75rem;
 }
@@ -859,6 +896,10 @@ video {
 .py-2{
 	padding-top: 0.5rem;
 	padding-bottom: 0.5rem;
+}
+.py-20{
+	padding-top: 5rem;
+	padding-bottom: 5rem;
 }
 .py-16{
 	padding-top: 4rem;
@@ -882,14 +923,8 @@ video {
 .pt-10{
 	padding-top: 2.5rem;
 }
-.pr-5{
-	padding-right: 1.25rem;
-}
-.pb-20{
-	padding-bottom: 5rem;
-}
-.pt-20{
-	padding-top: 5rem;
+.pr-4{
+	padding-right: 1rem;
 }
 .pt-16{
 	padding-top: 4rem;
@@ -900,8 +935,14 @@ video {
 .pt-3{
 	padding-top: 0.75rem;
 }
+.pt-20{
+	padding-top: 5rem;
+}
 .pb-48{
 	padding-bottom: 12rem;
+}
+.pt-4{
+	padding-top: 1rem;
 }
 .text-center{
 	text-align: center;
@@ -912,10 +953,6 @@ video {
 .text-sm{
 	font-size: 0.875rem;
 	line-height: 1.25rem;
-}
-.text-base{
-	font-size: 1rem;
-	line-height: 1.5rem;
 }
 .font-normal{
 	font-weight: 400;
@@ -929,29 +966,6 @@ video {
 .uppercase{
 	text-transform: uppercase;
 }
-.leading-relaxed{
-	line-height: 1.625;
-}
-.text-blue-600{
-	--tw-text-opacity: 1;
-	color: rgba(37, 99, 235, var(--tw-text-opacity));
-}
-.text-blue-400{
-	--tw-text-opacity: 1;
-	color: rgba(96, 165, 250, var(--tw-text-opacity));
-}
-.text-indigo-500{
-	--tw-text-opacity: 1;
-	color: rgba(99, 102, 241, var(--tw-text-opacity));
-}
-.text-pink-400{
-	--tw-text-opacity: 1;
-	color: rgba(244, 114, 182, var(--tw-text-opacity));
-}
-.text-red-600{
-	--tw-text-opacity: 1;
-	color: rgba(220, 38, 38, var(--tw-text-opacity));
-}
 .text-gray-900{
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
@@ -964,17 +978,21 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
-.text-gray-600{
-	--tw-text-opacity: 1;
-	color: rgba(75, 85, 99, var(--tw-text-opacity));
-}
 .text-gray-200{
 	--tw-text-opacity: 1;
 	color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
-.text-gray-500{
+.text-blue-600{
 	--tw-text-opacity: 1;
-	color: rgba(107, 114, 128, var(--tw-text-opacity));
+	color: rgba(37, 99, 235, var(--tw-text-opacity));
+}
+.text-indigo-500{
+	--tw-text-opacity: 1;
+	color: rgba(99, 102, 241, var(--tw-text-opacity));
+}
+.shadow-2xl{
+	--tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-md{
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -986,6 +1004,10 @@ video {
 }
 .shadow-lg{
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-inner{
+	--tw-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .outline-none{
@@ -2555,11 +2577,11 @@ video {
 	.sm\:-ml-1{
 		margin-left: -0.25rem;
 	}
+	.sm\:block{
+		display: block;
+	}
 	.sm\:hidden{
 		display: none;
-	}
-	.sm\:w-3\/12{
-		width: 25%;
 	}
 	.sm\:w-6\/12{
 		width: 50%;
@@ -2578,6 +2600,15 @@ video {
 	}
 }
 @media (min-width: 768px){
+	.md\:order-3{
+		order: 3;
+	}
+	.md\:order-2{
+		order: 2;
+	}
+	.md\:order-1{
+		order: 1;
+	}
 	.md\:my-0{
 		margin-top: 0px;
 		margin-bottom: 0px;
@@ -2588,17 +2619,17 @@ video {
 	.md\:mr-5{
 		margin-right: 1.25rem;
 	}
+	.md\:mt-0{
+		margin-top: 0px;
+	}
 	.md\:w-4\/12{
 		width: 33.333333%;
-	}
-	.md\:w-6\/12{
-		width: 50%;
 	}
 	.md\:w-8\/12{
 		width: 66.666667%;
 	}
-	.md\:w-5\/12{
-		width: 41.666667%;
+	.md\:w-9\/12{
+		width: 75%;
 	}
 	.md\:flex-row{
 		flex-direction: row;
@@ -2611,6 +2642,15 @@ video {
 	}
 	.md\:justify-start{
 		justify-content: flex-start;
+	}
+	.md\:justify-center{
+		justify-content: center;
+	}
+	.md\:justify-around{
+		justify-content: space-around;
+	}
+	.md\:self-center{
+		align-self: center;
 	}
 	.md\:py-10{
 		padding-top: 2.5rem;
@@ -2639,6 +2679,9 @@ video {
 	.lg\:mt-0{
 		margin-top: 0px;
 	}
+	.lg\:mt-5{
+		margin-top: 1.25rem;
+	}
 	.lg\:w-6\/12{
 		width: 50%;
 	}
@@ -2654,6 +2697,9 @@ video {
 	.lg\:w-9\/12{
 		width: 75%;
 	}
+	.lg\:w-5\/12{
+		width: 41.666667%;
+	}
 	.lg\:justify-center{
 		justify-content: center;
 	}
@@ -2666,10 +2712,15 @@ video {
 	.lg\:p-10{
 		padding: 2.5rem;
 	}
-	.lg\:pt-24{
-		padding-top: 6rem;
+	.lg\:pt-6{
+		padding-top: 1.5rem;
 	}
 	.lg\:text-left{
 		text-align: left;
+	}
+}
+@media (min-width: 1280px){
+	.xl\:w-6\/12{
+		width: 50%;
 	}
 }
